# clipboard-uploader

./: .gitignore  .gitmodules  CMakeLists.txt  Clipboard.cpp  Clipboard.h  ClipboardUploader.cpp  ClipboardUploader.rc  ClipboardUploader.sln  ClipboardUploader.vcxproj  ClipboardUploader.vcxproj.filters  HttpClient.cpp  HttpClient.h  HttpConnection.cpp  HttpConnection.h  Imageshack.cpp  Imageshack.h  Pastebin.cpp  Pastebin.h  README.md  Socket.cpp  Socket.h  Temp.cpp  Temp.h  WinTemp.cpp  WinTemp.h  params.cpp  params.h  resource.h  stdafx.h
